adding app_template

--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -335,7 +335,7 @@ if we are our experiences then we are both sides of them.
 <div class="newapp">
  <h3>Create a new App</h3>
  App Name <$$$ control name <input type="text"> $$$><BR>
- App Class <$$$ control class <input type="text"> $$$><BR>
+ App Class <$$$ control class <input type="text" value="Yote::AppRoot"> $$$><BR>
  <$$$ control new_app_b <button type="BUTTON">Register App</BUTTON> $$$>
  <?? init_create_app  ??>
 </div>
