--- a/yote_root/html/app_template.html
+++ b/yote_root/html/app_template.html
@@ -28,6 +28,7 @@
 	$.yote.init();
 	var app = $.yote.fetch_app( MYAPP );
 	$.yote.util.register_template_variable( 'app', app );
+        $.yote.util.init_ui();
     });
     </script>
 
