Added an automatic minifier routine for whole javascript directories. If the server gets a javascript directory as a request, it checks to see if a minified file exists for all of the files in that directory minified and concatinated together. It considers any file with .min.js extension to already be minified. This only looks at files with extensions ending in .js.

--- a/MadYote/html/index.html
+++ b/MadYote/html/index.html
@@ -3,15 +3,9 @@
   <head>
     <title>Yote Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/json2.js"></script>
+    <script src="/yote/js"></script>
 
-    <script src="/templates/templates.js"></script>
-
-    <script src="/yote/js/yote.js"></script>
-    <script src="/yote/js/yote.util.js"></script>
+    <script src="/templates/default_templates.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 
@@ -31,7 +25,7 @@
     <script>
       <!--
 	  $().ready(function() {
-	      $.yote.include_templates( '/templates/templates.html' );
+	      $.yote.include_templates( '/templates/default_templates.html' );
 	      $.yote.util.register_functions( base_templates );
 
 	      $.yote.init();
