--- a/yote_root/html/client_docs.html
+++ b/yote_root/html/client_docs.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <!-- TODO: rewrite this with templates and new info -->
   <head>
     <title>Yote</title>
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/json2.js"></script>
+    <script src="/yote/js"></script>
 
     <script src="/js/main.js"></script>
-    <script src="/yote/js/yote.js"></script>
-    <script src="/yote/js/yote.util.js"></script>
+
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -63,11 +60,7 @@ ote was written for simplicity of app construction and prototyping.
 	  <blockquote>
 	    <code>
 	      <pre>
-&lt;script src="/yote/js/jquery-latest.js"&gt;&lt;/script&gt;
-&lt;script src="/yote/js/jquery.cookie.js"&gt;&lt;/script&gt;
-&lt;script src="/yote/js/jquery.base64.min.js"&gt;&lt;/script&gt;
-&lt;script src="/yote/js/json2.js"&gt;&lt;/script&gt;
-&lt;script src="/yote/js/yote.js"&gt;&lt;/script&gt;
+&lt;script src="/yote/js"&gt;&lt;/script&gt;
 	      </pre>
 	    </code>
 	  </blockquote>
