--- a/yote_root/html/program.html
+++ b/yote_root/html/program.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <!-- TODO: rewrite this with templates and new info -->
   <head>
     <title>Yote</title>
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/json2.js"></script>
+    <script src="/yote/js"></script>
 
-    <script src="/yote/js/yote.js"></script>
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
 
     <META NAME="Author" CONTENT="Eric Wolf, coyocanid@gmail.com">
