--- a/yote_root/html/val.html
+++ b/yote_root/html/val.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
-<!-- Bootstrappy and meta. This page could replace itself -->
+<!-- TODO : Bootstrappy and meta. This page could replace itself -->
+<!-- TODO : rewrite with templates -->
   <head>
     <title>Validation</title>
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/json2.js"></script>
+    <script src="/yote/js"></script>
 
     <script src="/js/main.js"></script>
-    <script src="/yote/js/yote.js"></script>
-    <script src="/yote/js/yote.util.js"></script>
+
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
