--- a/yote_root/html/yote/reset.html
+++ b/yote_root/html/yote/reset.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
+  <!-- TODO : use templates here -->
   <head>
     <title>Reset Password</title>
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/yote.js"></script>
-    <script src="/yote/js/yote.util.js"></script>
+    <script src="/yote/js"></script>
     <script>
     $().ready(function(){
         $.yote.init();
