--- a/yote_root/html/yote/upload_test.html
+++ b/yote_root/html/yote/upload_test.html
@@ -1,13 +1,11 @@
+<!DOCTYPE html>
 <HTML>
+<!-- TODO: make sure this passes. May have to revisit how uploads are done -->
+
 <HEAD>
  <TITLE>Yote System</TITLE>
 
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/json2.js"></script>
-    <script src="/yote/js/yote.js"></script>
-    <script src="/yote/js/yote.util.js"></script>
+    <script src="/yote/js"></script>
 <script lang="javascript">
 
 $().ready( function() { 
