--- a/yote_root/html/app_template.html
+++ b/yote_root/html/app_template.html
@@ -5,15 +5,15 @@
 
     <title></title>
 
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.cookie.js"></script>
-    <script src="/yote/js/jquery.base64.min.js"></script>
-    <script src="/yote/js/json2.js"></script>
+    <!-- When the yote server is given a directory of javascript files, -->
+    <!-- a directory named 'js',                                        -->
+    <!-- it minifies them together in a single file.                    -->
+    <script src="/yote/js"></script>
 
-    <script src="/templates/templates.js"></script>
+    <!-- The templates directory contains template definitions and -->
+    <!-- javascript files.                                         -->
+    <script src="/templates/default_templates.js"></script>
 
-    <script src="/yote/js/yote.js"></script>
-    <script src="/yote/js/yote.util.js"></script>
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -22,34 +22,35 @@
 
     <script>
     $().ready(function(){
-	$.yote.include_templates( '/templates/templates.html' );
+        <!-- All templates in this file are registered with yote.  -->
+	$.yote.include_templates( '/templates/default_templates.html' );
+        <!-- The default_templates.js file contains a dictionary object  -->
+        <!-- called 'base_templates', which must be registered for the   -->
+	<!-- templating system to be able to use them.                   -->
 	$.yote.util.register_functions( base_templates );
 
+	<!-- This connects the client with the yote system -->
 	$.yote.init();
+
+	<!-- Fill in the classname or name registered in the admin page to  -->	
+	<!-- get a reference to the app.                                    -->
 	var app = $.yote.fetch_app( MYAPP );
 	$.yote.util.register_template_variable( 'app', app );
         $.yote.util.init_ui();
     });
     </script>
 
+    <!-- Templates are defined in the HEAD section as type text/template and clsas yote_template_definition -->
     <script type="text/template" class="yote_template_definition" template_name="RENAME_ME_1">
     </script>
 
     <script type="text/template" class="yote_template_definition" template_name="RENAME_ME_2">
     </script>
 
-    <script type="text/template" class="yote_template_definition" template_name="RENAME_ME_3">
-    </script>
-
-    <script type="text/template" class="yote_template_definition" template_name="RENAME_ME_4">
-    </script>
-
-    <script type="text/template" class="yote_template_definition" template_name="RENAME_ME_5">
-    </script>
-
   </head>
 
   <BODY>
-     <DIV class="yote_template side_panel" template="RENAME_ME_1" default_variable="app"></div>        
+    <!-- The filled out template will appear inside this div and be passed the app as the default variable. -->
+    <DIV class="yote_template side_panel" template="RENAME_ME_1" default_variable="app"></div>        
   </body>
 </html>
