--- a/MadYote/html/client_templates.html
+++ b/MadYote/html/client_templates.html
@@ -25,11 +25,11 @@
 
     <script>
     $().ready(function(){
-	$.yote.include_templates( '/templates/templates.html' );
+	$.yote.include_templates( '/templates/default_templates.html' );
 	$.yote.util.register_functions( base_templates );
 
 	$.yote.init();
-	var app = $.yote.fetch_app( 'MadYote' );
+	var app = $.yote.init( 'MadYote' );
 	var pages = app.get_page();
 	$.yote.util.register_template_variable( 'app', app );
 	$.yote.util.register_template_variable( 'pages', pages );
