--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -9,7 +9,7 @@
  body { background-color:wheat }
 </style>
 
-<script src="/yote/js"></script>
+<script src="/yote/_js/maxi.js"></script>
 
 <script>
     var tests = 0;
@@ -87,9 +87,10 @@
          // init yote
          $.yote.init();
          $.yote.logout();
-         $.yote.debug = false;
+         $.yote.reinit();
+         $.yote.debug = true;
 
- 	try {
+// 	try {
             //fetch app that doesn't require login and get scalar
             step('get app testappnologin');
             var nologin_app = $.yote.fetch_app( 'Yote::Test::TestAppNoLogin' );
@@ -578,11 +579,13 @@
  	    login_app.short_time( '', function( pass_resp ) { pass( "Passed short time test" )(); meets() }, function( fail_resp ) { fail( "Failed short time test" )(); meets(); }, true );
  	    login_app.short_time( '', function( pass_resp ) { pass( "Passed second short time test" )(); meets() }, function( fail_resp ) { fail( "Failed second short time test" )(); meets(); }, true );
  	    login_app.short_time( '', function( pass_resp ) { pass( "Passed third short time test" )(); meets() }, function( fail_resp ) { fail( "Failed third short time test" )(); meets(); }, true );
+/*
  	}
  	catch( err ) {
  	    fail( err )();
  	    wrap_up();
  	}
+*/
      } //do_tests
 
      do_tests();
