cleanup of javascript

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -40,7 +40,7 @@
  	pass( msg )();
      }
      else {
- 	fail( msg + "( expected " + expected + " and got " + result +")" )();
+ 	fail( msg + "( expected '" + expected + "' and got '" + result +"')" )();
      }
  }
  function ok( result, msg ) {
