updating template system like lots

--- a/yote_root/html/yote/admin.html
+++ b/yote_root/html/yote/admin.html
@@ -467,21 +467,13 @@ if we are our experiences then we are both sides of them.
 
 
 </section>
-<!-- ------------------------------ -->
 
   </head>
 
+<!--                                                              ------------------------------ -->
   <BODY>
-
     <DIV class="yote_template" template="YoteHeaderAdmin"></div>
-
-    <A NAME="Top">
-
+    <A NAME="Top"/>
     <DIV class="yote_template main" template="MainBody" id="mainbody" default_variable="root"></div>
-
-    <hr>
-
-    <footer>
-    </footer>
   </body>
 </html>
